<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:text="JustJava"
        android:textSize="65sp">

        <EditText
            android:id="@+id/name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView

            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:text="@string/toppings"/>

        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:text="@string/whippedcream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView

            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:text="@string/one"

                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus"
                android:textStyle="bold" />

        </LinearLayout>



        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/submit" />


    </LinearLayout>
</ScrollView>